force-app/main/default/objects/Unit__c/fields/Estimated_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time__c</fullName>
    <description>Estimated time of completion, in seconds</description>
    <inlineHelpText>Estimated time of completion, in seconds</inlineHelpText>
    <label>Estimated Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>