force-app/main/default/objects/Unit__c/fields/Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>Exam_Type__c</fullName>
    <label>Exam Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multiple Choice</fullName>
                <default>true</default>
                <label>Multiple Choice</label>
            </value>
            <value>
                <fullName>Hands On Challenge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>