force-app/main/default/objects/Unit__c/fields/Point_Score__c.field-meta.xml
<CustomField>
    <fullName>Point_Score__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Point Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>